# rustfsm

./: Cargo.toml
src/: card_reader.rs  card_reader_no_state_enum.rs  lib.rs  state_machine.rs
state_machine_procmacro/: Cargo.toml
state_machine_procmacro/src/: lib.rs
state_machine_procmacro/tests/: 01-simple.rs  02-forgot-to-name.rs  progress.rs
state_machine_procmacro/tests/trybuild/: 01-simple.rs  02-forgot-to-name.stderr  03-handler.rs  forgot_name_fail.stderr  handler_arg_pass.rs  handler_pass.rs  medium_complex_pass.rs  no_handle_conversions_require_into_fail.rs  no_handle_conversions_require_into_fail.stderr  simple_pass.rs  struct_event_variant_fail.rs  struct_event_variant_fail.stderr  tuple_more_item_event_variant_fail.rs  tuple_more_item_event_variant_fail.stderr  tuple_zero_item_event_variant_fail.rs  tuple_zero_item_event_variant_fail.stderr
state_machine_trait/src/: lib.rs
tests/: activity_state_machine.rs  card_reader.rs  card_reader_macro.rs
