[package]
name = "statemachinetest"
version = "0.1.0"
authors = ["Spencer Judge <sjudge@hey.com>"]
edition = "2018"

[[test]]
name = "card_reader"
path = "tests/card_reader.rs"

[dependencies]
thiserror = "1.0"
derive_more = "0.99.11"
state_machine_procmacro = { path = "state_machine_procmacro" }
state_machine_trait = { path = "state_machine_trait" }

[workspace]
members = [
    ".",
    "state_machine_procmacro",
    "state_machine_trait"
]